--- a/src/index.scss
+++ b/src/index.scss
@@ -45,3 +45,9 @@ a {
     text-decoration: none;
     color: black;
 }
+
+// --------------- General Semantic UI adjustments ---------------
+.ui.button.disabled:disabled {
+    pointer-events: inherit !important;
+    cursor: not-allowed;
+}
