Add color effects on hover

--- a/src/index.scss
+++ b/src/index.scss
@@ -26,6 +26,10 @@
     --accentColorOverlay-2: rgba(239, 57, 112, 0.5);
     --accentColorOverlay-3: rgba(239, 57, 112, 0.25);
     --accentColorOverlay-4: rgba(239, 57, 112, 0.05);
+
+    --semanticPositiveColor: rgb(33, 186, 69);
+    --semanticPositiveHoveredColor: rgb(22, 171, 57);
+    --semanticPositiveHoveredColor-03: rgba(22, 171, 57, 0.25);
 }
 
 body {
