--- a/src/components/FileUpload.scss
+++ b/src/components/FileUpload.scss
@@ -1,8 +1,20 @@
 @import '../variables.scss';
 
+.ui.label.help-tag {
+    border-radius: 50%;
+    box-shadow: 0 0 0 0.2rem rgba(0, 0, 0, 0.2);
+    font-size: 1rem;
+}
+
+.ui.label.help-tag:hover {
+    background-color: var(--semanticPositiveHoveredColor) !important;
+    box-shadow: 0 0 0 0.2rem var(--semanticPositiveHoveredColor-03);
+    cursor: pointer;
+}
+
 .file-upload {
     &-input {
-        text-align: center;
+        display: none;
     }
 
     &-drop-area {
@@ -23,6 +35,18 @@
             border-color: var(--accentColor);
             border-style: solid;
             box-shadow: inset 0 0 0.5rem 0.5rem var(--accentColorOverlay-3);
+        }
+    }
+
+    &-browse-area,
+    &-drop-area {
+        &:hover {
+            border-color: var(--semanticPositiveHoveredColor);
+
+            .ui.button {
+                background-color: var(--semanticPositiveHoveredColor);
+                color: white;
+            }
         }
     }
 }
