Make the file upload area collapsible

--- a/src/index.scss
+++ b/src/index.scss
@@ -3,6 +3,8 @@
 }
 
 :root {
+    --headerHeight: 5rem;
+
     --darkColor: rgb(51, 67, 80);
     --darkColorOverlay-1: rgba(51, 67, 80, 0.75);
     --darkColorOverlay-2: rgba(51, 67, 80, 0.5);
