--- a/src/components/FileUpload.scss
+++ b/src/components/FileUpload.scss
@@ -1,5 +1,17 @@
 @import '../variables.scss';
 
+.ui.placeholder.segment {
+    transition: height 3s ease;
+
+    &.collapsed {
+        border: none;
+        height: 0;
+        min-height: 0;
+        overflow: hidden;
+        padding: 0;
+    }
+}
+
 .ui.label.help-tag {
     border-radius: 50%;
     box-shadow: 0 0 0 0.2rem rgba(0, 0, 0, 0.2);
@@ -10,6 +22,10 @@
     background-color: var(--semanticPositiveHoveredColor) !important;
     box-shadow: 0 0 0 0.2rem var(--semanticPositiveHoveredColor-03);
     cursor: pointer;
+}
+
+.ui.icon.collapse-icon:hover {
+    color: var(--semanticPositiveHoveredColor) !important;
 }
 
 .file-upload {
