--- a/src/components/TopicModellingPage.scss
+++ b/src/components/TopicModellingPage.scss
@@ -1,5 +1,4 @@
 .topic-modelling-start-page {
     min-height: 100vh;
-    display: flex;
-    align-items: center;
+    margin-top: var(--headerHeight);
 }
