--- a/src/components/common/Modal.scss
+++ b/src/components/common/Modal.scss
@@ -8,7 +8,7 @@
     z-index: 100;
     width: 100%;
     height: 100vh;
-    background-color: rgba(0, 0, 0, 0.75);
+    background-color: rgba(0, 0, 0, 0.85);
     opacity: 0;
     visibility: hidden;
 }
@@ -17,20 +17,16 @@
     display: flex;
     flex-direction: column;
     justify-content: space-around;
-    /* align-items: center; */
+    align-items: center;
     position: fixed;
     min-width: 30vw;
     max-width: 65vw;
     min-height: 30vh;
     max-height: 65vh;
-    /* border-radius: 1rem; */
     padding: 2.5rem;
     background-color: white;
-    font-size: 1vmin;
-    font-weight: 400;
-    letter-spacing: 0;
-    opacity: 0;
     visibility: hidden;
+    opacity: 0;
 }
 
 .modal-backdrop,
@@ -52,8 +48,4 @@
     color: #4392c7;
     font-weight: 400;
     text-transform: none;
-}
-
-.modal-paragraph {
-    line-height: 1.5em;
 }
