--- a/frontend/src/components/common/CustomButton.scss
+++ b/frontend/src/components/common/CustomButton.scss
@@ -25,9 +25,9 @@
         background-color: var(--lightColor);
     }
 
-    &:hover,
-    &:focus,
-    &:active {
+    &:hover:not(:disabled),
+    &:focus:not(:disabled),
+    &:active:not(:disabled) {
         background-color: var(--accentColorOverlay-1);
         // box-shadow: 0 0 0.5rem 0.5rem (--accentColorOverlay-3);
         color: --lightColor;
