--- a/frontend/src/components/TopicModellingParameters.scss
+++ b/frontend/src/components/TopicModellingParameters.scss
@@ -4,8 +4,7 @@
     grid-template-areas:
         'heading heading'
         'subheading subheading'
-        'options content'
-        'footer footer';
+        'options output';
     grid-template-columns: 33% auto;
 }
 
