--- a/frontend/src/components/TopicModellingParameters.scss
+++ b/frontend/src/components/TopicModellingParameters.scss
@@ -4,7 +4,8 @@
     grid-template-areas:
         'heading heading'
         'subheading subheading'
-        'options output';
+        'options output'
+        'options footer';
     grid-template-columns: 33% auto;
 }
 
@@ -35,11 +36,20 @@
     &.empty {
         justify-content: center;
     }
+
+    &-footer {
+        min-height: 6rem;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+    }
 }
 
 .text-processing-footer {
+    min-height: 6rem;
     grid-area: footer;
     display: flex;
     justify-content: center;
-    padding: 1rem;
+    align-items: center;
+    padding: 0;
 }
