--- a/frontend/src/index.scss
+++ b/frontend/src/index.scss
@@ -12,22 +12,32 @@
     --darkColorOverlay-4: rgba(51, 67, 80, 0.05);
 
     --mainColor: rgb(91, 177, 150);
-    --mainColorOverlay-1: rgba(91, 177, 150, 0.75);
-    --mainColorOverlay-2: rgba(91, 177, 150, 0.5);
-    --mainColorOverlay-3: rgba(91, 177, 150, 0.25);
-    --mainColorOverlay-4: rgba(91, 177, 150, 0.05);
+    --mainColorOverlay-1: rgba(91, 177, 150, 0.95);
+    --mainColorOverlay-2: rgba(91, 177, 150, 0.75);
+    --mainColorOverlay-3: rgba(91, 177, 150, 0.5);
+    --mainColorOverlay-4: rgba(91, 177, 150, 0.25);
+    --mainColorOverlay-5: rgba(91, 177, 150, 0.05);
 
     --lightColor: rgba(230, 230, 235, 1);
-    --lightColorOverlay-1: rgba(230, 230, 235, 0.75);
-    --lightColorOverlay-2: rgba(230, 230, 235, 0.5);
-    --lightColorOverlay-3: rgba(230, 230, 235, 0.25);
-    --lightColorOverlay-4: rgba(230, 230, 235, 0.05);
+    --lightColorOverlay-1: rgba(230, 230, 235, 0.95);
+    --lightColorOverlay-2: rgba(230, 230, 235, 0.75);
+    --lightColorOverlay-3: rgba(230, 230, 235, 0.5);
+    --lightColorOverlay-4: rgba(230, 230, 235, 0.25);
+    --lightColorOverlay-5: rgba(230, 230, 235, 0.05);
+
+    --textColor: rgba(0, 0, 0, 1);
+    --textColorOverlay-1: rgba(0, 0, 0, 0.95);
+    --textColorOverlay-2: rgba(0, 0, 0, 0.75);
+    --textColorOverlay-3: rgba(0, 0, 0, 0.5);
+    --textColorOverlay-4: rgba(0, 0, 0, 0.25);
+    --textColorOverlay-5: rgba(0, 0, 0, 0.05);
 
     --accentColor: rgb(239, 57, 112);
-    --accentColorOverlay-1: rgba(239, 57, 112, 0.75);
-    --accentColorOverlay-2: rgba(239, 57, 112, 0.5);
-    --accentColorOverlay-3: rgba(239, 57, 112, 0.25);
-    --accentColorOverlay-4: rgba(239, 57, 112, 0.05);
+    --accentColorOverlay-1: rgba(239, 57, 112, 0.95);
+    --accentColorOverlay-2: rgba(239, 57, 112, 0.75);
+    --accentColorOverlay-3: rgba(239, 57, 112, 0.5);
+    --accentColorOverlay-4: rgba(239, 57, 112, 0.25);
+    --accentColorOverlay-5: rgba(239, 57, 112, 0.05);
 
     --semanticPositiveColor: rgb(33, 186, 69);
     --semanticPositiveHoveredColor: rgb(22, 171, 57);
@@ -70,4 +80,9 @@ a {
 .ui.button.disabled:disabled {
     pointer-events: inherit !important;
     cursor: not-allowed;
+}
+
+.muted {
+    opacity: 0.3;
+    pointer-events: none;
 }
