--- a/frontend/src/components/TextProcessingOutput.scss
+++ b/frontend/src/components/TextProcessingOutput.scss
@@ -4,10 +4,7 @@
     position: relative;
     display: flex;
     flex-direction: column;
-
-    &.muted {
-        opacity: 0.3;
-    }
+    color: var(--textColorOverlay-3);
 
     &-explanation {
         display: flex;
@@ -29,7 +26,12 @@
         column-count: 2;
         column-gap: 2rem;
         text-align: justify;
-        color: #767676;
+
+        &.placeholder {
+            padding: 5rem;
+            text-align: center;
+            column-count: 1;
+        }
 
         & .added {
             color: var(--mainColor);
