--- a/frontend/src/components/TextProcessingOutput.scss
+++ b/frontend/src/components/TextProcessingOutput.scss
@@ -4,7 +4,7 @@
     position: relative;
     display: flex;
     flex-direction: column;
-    color: var(--textColorOverlay-3);
+    color: var(--darkColorOverlay-3);
 
     &-explanation {
         display: flex;
