Create basic AuthForm & RegistrationPage components

--- a/client/src/index.scss
+++ b/client/src/index.scss
@@ -48,6 +48,8 @@
     --semanticPositiveHoveredColor: rgb(22, 171, 57);
     --semanticPositiveHoveredColor-03: rgba(22, 171, 57, 0.25);
 
+    --boxGlow: 0 0 5px 5px rgba(210, 245, 235, 0.2);
+
     --breakSmall: 360px;
     --breakMedium: 760px;
     --breakLarge: 1200px;
