Create Main wrapper/container component

--- a/client/src/index.scss
+++ b/client/src/index.scss
@@ -21,7 +21,7 @@
 
     --navbar-background-color: rgba(21, 21, 25, 0.5);
 
-    --header-height: 2rem;
+    --header-height: 40px;
 
     --darkColor: rgb(51, 67, 80);
     --darkColorOverlay-1: rgba(51, 67, 80, 0.75);
