--- a/client/src/components/common/Main.scss
+++ b/client/src/components/common/Main.scss
@@ -1,9 +1,10 @@
 .page-content {
-    max-width: 1200px;
     height: 100vh;
-    margin: 0 auto;
+    width: 100%;
+    margin: 0 calc(var(--navbar-expanded-width) + 1rem);
     padding-top: var(--header-height);
     display: flex;
     justify-content: center;
     align-items: center;
+    overflow: hidden;
 }
