--- a/client/src/components/common/PageWrapper.scss
+++ b/client/src/components/common/PageWrapper.scss
@@ -2,6 +2,9 @@
     width: 100%;
     min-height: 100vh;
     position: relative;
+    display: flex;
+    justify-content: center;
+    align-items: center;
     padding-bottom: 0;
     z-index: 0;
 }
