--- a/client/src/components/TextPoolSelect.scss
+++ b/client/src/components/TextPoolSelect.scss
@@ -12,19 +12,21 @@
 
 .text-pool-choice-select {
     padding: 0.5rem;
-    border: 1px solid var(--mainColorOverlay-3);
     border-radius: 0.3rem;
+    border: 1px solid var(--main-color-02);
+    color: var(--main-color-02);
     background-color: transparent;
     text-align: center;
     text-align-last: center;
 
     & option {
+        background-color: var(--background-color-01);
         text-align: center;
     }
 
     &:focus {
         outline: none;
-        border: 2px solid var(--accentColorOverlay-3);
-        box-shadow: 0 0 0.5rem 0.1rem var(--accentColorOverlay-3);
+        border: 1px solid var(--accent-color-01);
+        box-shadow: 0 0 0.25rem var(--accent-color-01);
     }
 }
