--- a/client/src/components/TextProcessingOutput.scss
+++ b/client/src/components/TextProcessingOutput.scss
@@ -1,49 +1,35 @@
-.text-processing-output {
-    min-height: 50vh;
-    grid-area: output;
+.text-processing-preview {
+    height: 100%;
     position: relative;
     display: flex;
     flex-direction: column;
-    color: var(--darkColorOverlay-3);
+    color: var(--background-color-02);
+
+    & .added {
+        color: var(--accent-color-02);
+    }
+
+    & .removed {
+        color: var(--accent-color-03);
+    }
 
     &-explanation {
         display: flex;
         justify-content: space-evenly;
         padding: 0 0 1rem;
-
-        & .output-deleted {
-            color: var(--accentColor);
-        }
-
-        & .output-added {
-            color: var(--mainColor);
-        }
     }
 
     &-text {
-        flex-grow: 1;
         word-break: break-all;
         column-count: 2;
         column-gap: 2rem;
         text-align: justify;
+        font-size: 0.9rem;
 
         &.placeholder {
             padding: 5rem;
             text-align: center;
             column-count: 1;
         }
-
-        & .added {
-            color: var(--mainColor);
-        }
-
-        & .removed {
-            color: var(--accentColor);
-        }
-    }
-
-    &-footer {
-        display: flex;
-        justify-content: center;
     }
 }
