Style corrections: spinner & switch checkbox

--- a/client/src/components/common/Spinner.scss
+++ b/client/src/components/common/Spinner.scss
@@ -17,7 +17,7 @@
     width: 20px;
     height: 56px;
     border-radius: 20%;
-    background: var(--mainColor);
+    background: var(--accent-color-01);
 }
 .spinner div:nth-child(1) {
     transform: rotate(0deg);
