--- a/client/src/components/common/SwitchCheckbox.scss
+++ b/client/src/components/common/SwitchCheckbox.scss
@@ -1,18 +1,18 @@
 .switch {
     position: relative;
     display: inline-block;
-    width: 3.4rem;
-    height: 1.6rem;
+    width: 3rem;
+    height: 1.4rem;
     margin: 0.5rem;
 
     &-checkbox {
         display: none;
 
         &:checked + .switch-slider {
-            background-color: var(--mainColor);
+            background-color: var(--accent-color-02b);
 
             &:before {
-                transform: translateX(1.8rem);
+                transform: translateX(1.5rem);
             }
         }
     }
@@ -24,7 +24,7 @@
         left: 0;
         right: 0;
         bottom: 0;
-        background-color: rgba(0, 0, 0, 0.15);
+        background-color: var(--background-color-02);
         transition: 0.4s;
         border-radius: 1.5rem;
 
@@ -35,11 +35,11 @@
         &::before {
             content: '';
             position: absolute;
-            height: 1.4rem;
-            width: 1.4rem;
+            height: 1.2rem;
+            width: 1.2rem;
             left: 0.1rem;
             bottom: 0.1rem;
-            background-color: white;
+            background-color: var(--main-color-02);
             transition: 0.3s;
             border-radius: 50%;
         }
