--- a/client/src/index.scss
+++ b/client/src/index.scss
@@ -14,18 +14,19 @@
     --main-color-02: rgba(255, 255, 255, 0.7);
 
     --background-color-01: rgb(48, 44, 64);
-    --background-color-02: rgba(0, 0, 0, 0.7);
+    --background-color-02: rgb(21, 21, 25);
 
     --accent-color-01: goldenrod;
-    --accent-color-02: var(--accent-color-positive);
-    --accent-color-03: var(--accent-color-positive);
+    --accent-color-02: rgb(91, 177, 150);
+    --accent-color-02b: rgba(91, 177, 150, 0.5);
+    --accent-color-03: rgb(239, 57, 112);
 
     --navbar-compact-width: 4rem;
     --navbar-expanded-width: 14rem;
 
-    --navbar-background-color: rgba(21, 21, 25, 0.5);
+    --navbar-background-color: rgba(21, 21, 25, 0.6);
 
-    --header-height: 40px;
+    --header-height: 60px;
 
     --darkColor: rgb(51, 67, 80);
     --darkColorOverlay-1: rgba(51, 67, 80, 0.75);
@@ -86,8 +87,7 @@ body {
 body {
     margin: 0;
     padding: 0;
-    font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen', 'Ubuntu',
-        'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue', sans-serif;
+    font-family: 'Roboto', sans-serif;
     -webkit-font-smoothing: antialiased;
     -moz-osx-font-smoothing: grayscale;
     background: var(--background-color-01);
