--- a/client/src/components/common/AuthForm.scss
+++ b/client/src/components/common/AuthForm.scss
@@ -3,15 +3,18 @@
     width: 30rem;
     margin: 0 auto;
     padding: 5rem;
-    border: 0.25vmin solid var(--mainColor);
+    border: 0.25vmin solid var(--main-color-01);
     opacity: 0.8;
 }
 
 .form-headline {
     margin: 0 0 1rem;
-    font-size: 1.5rem;
+    color: var(--main-color-01);
+    font-size: 2.5rem;
     font-weight: 300;
     text-align: center;
+    text-transform: uppercase;
+    letter-spacing: 0.2rem;
     opacity: 0.7;
 }
 
@@ -27,45 +30,48 @@
     margin: 1.5vmin 0;
     padding: 1vmin 2vmin;
     background-color: transparent;
-    border: 0.2vmin solid var(--mainColor);
-    color: var(--darkColor);
+    border: 0.2vmin solid var(--main-color-01);
+    color: var(--accent-color-02);
 
     &::placeholder {
-        color: var(--mainColor);
+        color: var(--main-color-01);
         font-size: 0.75rem;
         opacity: 0.7;
     }
 
     &:focus {
         outline: none;
-        border: 0.2vmin solid var(--accentColor);
-        box-shadow: 0 0 1vmin var(--accentColor);
+        border: 0.2vmin solid var(--accent-color-02);
+        box-shadow: 0 0 1vmin var(--accent-color-02);
     }
 }
 
 .submit-button {
     margin: 3vmin 0 0;
     padding: 1rem 2rem;
+    border: none;
+    background-color: var(--main-color-01);
+    color: var(--background-color-01);
     font-size: 1rem;
     letter-spacing: 0.2rem;
     text-transform: uppercase;
-    background-color: var(--mainColor);
-    color: white;
-    border: none;
+    font-weight: 700;
     cursor: pointer;
 
     &:hover,
     &:focus {
-        background-color: var(--accentColor);
-        box-shadow: var(--boxGlow);
+        background-color: var(--accent-color-02);
+        box-shadow: var(--box-glow);
     }
 }
 
 .form-footer {
+    margin-top: 1rem;
     padding: 0.5rem;
     text-align: center;
+    color: var(--main-color-02);
 
     & a {
-        color: var(--accentColor);
+        color: var(--accent-color-02);
     }
 }
