--- a/client/src/components/common/PageWrapper.scss
+++ b/client/src/components/common/PageWrapper.scss
@@ -6,5 +6,6 @@
     justify-content: center;
     align-items: center;
     padding-bottom: 0;
+    color: var(--main-color-02);
     z-index: 0;
 }
