Give a min width to the file drop area & page wrapper

--- a/client/src/components/FileUpload.scss
+++ b/client/src/components/FileUpload.scss
@@ -49,6 +49,7 @@
     }
 
     &-drop-area {
+        min-width: 235px;
         display: flex;
         flex-direction: column;
         justify-content: center;
