--- a/client/src/components/pages/FileUploadPage.scss
+++ b/client/src/components/pages/FileUploadPage.scss
@@ -2,13 +2,35 @@
     width: 100%;
     height: 100%;
     padding: 50px 0;
-    display: grid;
-    grid-template-columns: 1fr 2fr;
-    grid-column-gap: 5rem;
+    display: flex;
 
-    &.step-validation {
+    .upload-left {
+        width: 650px;
+        margin-left: auto;
+        margin-right: auto;
+        transition: width 0.5s;
+        transition-delay: margin 0.3s;
     }
 
+    .upload-right {
+        width: 0;
+        overflow: hidden;
+        transition: width 0.5s;
+        transition-delay: flex-direction 0.3s;
+    }
+
+    &.step-validation,
     &.step-submission {
+        flex-direction: row;
+
+        .upload-left {
+            width: 35%;
+            margin-right: auto;
+        }
+
+        .upload-right {
+            width: 60%;
+            margin-left: auto;
+        }
     }
 }
