Add hover bridge for profile drop-down menu arrow

--- a/client/src/components/ProfileBubble.scss
+++ b/client/src/components/ProfileBubble.scss
@@ -18,6 +18,16 @@
         transform: translateY(-50%);
     }
 
+    // :before serves as a hover bridge for the arrow (:after)
+    &:before {
+        content: '';
+        position: absolute;
+        top: 0;
+        right: 0;
+        height: 100%;
+        width: 100%;
+    }
+
     &:after {
         content: '';
         position: absolute;
