--- a/client/src/components/NavBar.scss
+++ b/client/src/components/NavBar.scss
@@ -8,6 +8,7 @@
         background-color: var(--navbar-background-color);
         overflow: hidden;
         transition: width 0.5s ease;
+        animation: fadeIn 1.2s;
     }
 
     &:hover {
