--- a/client/src/components/ProfileBubble.scss
+++ b/client/src/components/ProfileBubble.scss
@@ -10,6 +10,7 @@
     padding: 0 1rem;
     border-radius: 50%;
     cursor: pointer;
+    animation: fadeIn 1.2s;
 
     & .user-status {
         position: absolute;
