--- a/client/src/index.scss
+++ b/client/src/index.scss
@@ -120,3 +120,12 @@ ul {
     opacity: 0.3;
     pointer-events: none;
 }
+
+@keyframes fadeIn {
+    0% {
+        opacity: 0;
+    }
+    100% {
+        opacity: 1;
+    }
+}
