Create responsive loading indicator

--- a/client/src/index.scss
+++ b/client/src/index.scss
@@ -21,6 +21,8 @@
     --accent-color-02b: rgba(91, 177, 150, 0.5);
     --accent-color-03: rgb(239, 57, 112);
 
+    --loading-indicator-color: var(--accent-color-01);
+
     --navbar-compact-width: 4rem;
     --navbar-expanded-width: 14rem;
 
