--- a/client/src/components/pages/FileManagementPage.scss
+++ b/client/src/components/pages/FileManagementPage.scss
@@ -2,11 +2,21 @@
     &-page {
         width: 100%;
         height: 100%;
-        margin-top: 20vh;
+        padding-top: 50px;
+        display: flex;
+        flex-direction: column;
     }
 
     &-heading {
         margin-bottom: 2rem;
         text-align: center;
+    }
+
+    &-container {
+        height: 100%;
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        padding: auto;
     }
 }
