--- a/client/src/components/FileUpload.scss
+++ b/client/src/components/FileUpload.scss
@@ -21,39 +21,13 @@
         display: none;
     }
 
-    &-headline {
-        display: flex;
-        align-items: center;
-        justify-content: center;
-        color: var(--main-color-01);
-        font-size: 1.5rem;
-
-        & .icon {
-            margin-left: 1rem;
-            display: flex;
-            justify-content: center;
-            align-items: center;
-            cursor: pointer;
-            border-radius: 50%;
-            width: 2.2rem;
-            transition: all 0.3s;
-            font-size: 3rem;
-            fill: var(--main-color-02);
-
-            &:hover {
-                color: var(--accent-color-01);
-                text-shadow: 0 0 20px rgba(255, 255, 255, 1);
-            }
-        }
-    }
-
     &-drop-area {
         min-width: 235px;
         display: flex;
         flex-direction: column;
         justify-content: center;
         align-items: center;
-        margin: 1.5rem auto 5rem;
+        margin: 0 auto 5rem;
         border: 1px dashed var(--main-color-01);
         padding: 2rem;
         border-radius: 0.5rem;
@@ -133,7 +107,7 @@
         margin: 0.75rem 0;
         padding: 0.75rem 1.5rem;
         background-color: transparent;
-        border: 0.2vmin solid var(--main-color-02);
+        border: 1px solid var(--main-color-02);
         border-radius: 0.2rem;
         color: var(--main-color-01);
         font-size: 0.9rem;
@@ -146,7 +120,7 @@
 
         &:focus {
             outline: none;
-            border: 0.2vmin solid var(--accent-color-01);
+            border: 1px solid var(--accent-color-01);
             box-shadow: 0 0 0.3rem var(--accent-color-01);
         }
     }
