--- a/client/src/components/pages/FileUploadPage.scss
+++ b/client/src/components/pages/FileUploadPage.scss
@@ -1,8 +1,54 @@
 .upload-page {
     width: 100%;
     height: 100%;
-    padding: 50px 0;
     display: flex;
+    flex-direction: column;
+
+    &-title {
+        display: inline-block;
+        margin-top: 0;
+        margin-right: auto;
+        margin-bottom: 0;
+        font-weight: 300;
+
+        & .icon {
+            margin-left: 1rem;
+            display: inline-flex;
+            justify-content: center;
+            align-items: center;
+            cursor: pointer;
+            border-radius: 50%;
+            width: 2.2rem;
+            transition: all 0.3s;
+            fill: var(--main-color-02);
+
+            &:hover {
+                color: var(--accent-color-01);
+                text-shadow: 0 0 20px rgba(255, 255, 255, 1);
+            }
+        }
+    }
+
+    &-content {
+        width: 100%;
+        display: flex;
+
+        &.step-validation,
+        &.step-submission {
+            flex-direction: row;
+
+            .upload-left {
+                width: 35%;
+                margin-right: auto;
+                margin-left: 0;
+            }
+
+            .upload-right {
+                width: 60%;
+                margin-left: auto;
+            }
+        }
+    }
 
     .upload-left {
         width: 650px;
@@ -17,20 +63,5 @@
         overflow: hidden;
         transition: width 0.5s;
         transition-delay: flex-direction 0.3s;
-    }
-
-    &.step-validation,
-    &.step-submission {
-        flex-direction: row;
-
-        .upload-left {
-            width: 35%;
-            margin-right: auto;
-        }
-
-        .upload-right {
-            width: 60%;
-            margin-left: auto;
-        }
     }
 }
