--- a/client/src/components/FileUpload.scss
+++ b/client/src/components/FileUpload.scss
@@ -102,7 +102,7 @@
         color: var(--main-color-02);
     }
 
-    &-submit-button {
+    &-submit-button.custom-button {
         width: 100%;
         margin: 2rem auto;
         text-transform: uppercase;
