--- a/client/src/components/common/CustomButton.scss
+++ b/client/src/components/common/CustomButton.scss
@@ -6,7 +6,8 @@
     justify-content: center;
     align-items: center;
     min-width: 7rem;
-    border: 2px solid var(--main-color-01);
+    border: 1px solid var(--main-color-01);
+    border-radius: 10px;
     margin: 1rem;
     padding: 1rem 2rem;
     background-color: transparent;
