--- a/client/src/components/common/Main.scss
+++ b/client/src/components/common/Main.scss
@@ -6,6 +6,6 @@
     display: flex;
     justify-content: center;
     align-items: center;
-    overflow: hidden;
+    // overflow: hidden;
     animation: fadeIn 1.2s;
 }
