--- a/client/src/index.scss
+++ b/client/src/index.scss
@@ -132,11 +132,38 @@ ul {
     pointer-events: none;
 }
 
+.wiggle {
+    animation: wiggle 0.82s cubic-bezier(0.36, 0.07, 0.19, 0.97) both;
+}
+
 @keyframes fadeIn {
     0% {
         opacity: 0;
     }
     100% {
         opacity: 1;
+    }
+}
+
+@keyframes wiggle {
+    10%,
+    90% {
+        transform: translateX(-2px);
+    }
+
+    20%,
+    80% {
+        transform: translateX(4px);
+    }
+
+    30%,
+    50%,
+    70% {
+        transform: translateX(-8px);
+    }
+
+    40%,
+    60% {
+        transform: translateX(8px);
     }
 }
