--- a/client/src/components/pages/FileManagementPage.scss
+++ b/client/src/components/pages/FileManagementPage.scss
@@ -2,14 +2,14 @@
     &-page {
         width: 100%;
         height: 100%;
-        padding-top: 50px;
         display: flex;
         flex-direction: column;
     }
 
-    &-heading {
-        margin-bottom: 2rem;
-        text-align: center;
+    &-title {
+        margin: 0;
+        font-size: 2rem;
+        font-weight: 300;
     }
 
     &-container {
