--- a/client/src/components/ProfileBubble.scss
+++ b/client/src/components/ProfileBubble.scss
@@ -1,23 +1,15 @@
 .profile-bubble {
-    position: absolute;
-    top: 1rem;
-    right: 1rem;
+    position: relative;
     display: flex;
     flex-direction: column;
     justify-content: center;
     align-items: flex-end;
     margin-right: 2rem;
-    padding: 0 1rem;
+    margin-left: 1rem;
+    padding: 0 1rem 0 0;
     border-radius: 50%;
     cursor: pointer;
     animation: fadeIn 1.2s;
-
-    & .user-status {
-        position: absolute;
-        right: 45px;
-        top: 11px;
-        transform: translateY(-50%);
-    }
 
     // :before serves as a hover bridge for the arrow (:after)
     &:before {
@@ -25,8 +17,8 @@
         position: absolute;
         top: 0;
         right: 0;
-        height: 100%;
-        width: 100%;
+        height: 200%;
+        width: 325%;
     }
 
     &:after {
@@ -40,6 +32,9 @@
     }
 
     & .profile-menu-nav {
+        position: absolute;
+        top: 1.5rem;
+        right: 0.5rem;
         height: 0;
         opacity: 0;
         visibility: hidden;
