Create module board on workflow composition page

--- a/client/src/components/pages/WorkflowBuilderPage.scss
+++ b/client/src/components/pages/WorkflowBuilderPage.scss
@@ -1,6 +1,6 @@
 .workflow-composition {
     &-page {
-        height: calc(100% - var(--header-height));
+        height: 100%;
         width: 100%;
     }
 
@@ -13,5 +13,6 @@
     &-content {
         min-height: 60vh;
         display: flex;
+        justify-content: space-evenly;
     }
 }
