--- a/client/src/components/ModuleCard.scss
+++ b/client/src/components/ModuleCard.scss
@@ -3,7 +3,7 @@
     position: relative;
     min-width: 150px;
     width: 150px;
-    margin: 0.5rem;
+    margin: 1rem;
     display: flex;
     flex-direction: column;
     justify-content: center;
@@ -22,7 +22,7 @@
             position: relative;
             min-width: 150px;
             width: 150px;
-            margin: 0.5rem;
+            margin: 0 1rem;
             display: flex;
             flex-direction: column;
             justify-content: center;
@@ -45,7 +45,7 @@
                 content: '\27A7';
                 position: absolute;
                 bottom: -4.5rem;
-                color: rgba(255, 255, 255, 1);
+                color: rgba(255, 255, 255, 0.5);
                 font-size: 5rem;
                 transform: rotate(90deg);
                 z-index: 2;
@@ -53,6 +53,7 @@
 
             .module-card-mirror {
                 height: 150px;
+                margin: 2.5rem 1rem 1rem;
                 border: 2px solid white;
                 display: block;
 
@@ -64,7 +65,7 @@
                     justify-content: center;
                     align-items: center;
                     font-size: 3rem;
-                    color: rgba(255, 255, 255, 0.7);
+                    color: rgba(255, 255, 255, 0.5);
                 }
             }
         }
@@ -75,7 +76,7 @@
             content: '\27A7';
             position: absolute;
             right: -3.5rem;
-            color: rgba(255, 255, 255, 1);
+            color: rgba(255, 255, 255, 0.5);
             font-size: 5rem;
         }
     }
