--- a/client/src/components/ModuleBoard.scss
+++ b/client/src/components/ModuleBoard.scss
@@ -12,7 +12,6 @@
 
 .module-list {
     width: 100%;
-    padding: 0.5rem;
     display: flex;
     justify-content: space-evenly;
     border-radius: 5px;
@@ -24,7 +23,6 @@
     padding: 0 0.5rem;
     display: flex;
     justify-content: space-between;
-    align-items: center;
     border-radius: 5px;
     background-color: #49505e;
 
@@ -48,6 +46,39 @@
     color: white;
     font-weight: bold;
     text-align: center;
+}
+
+.workflow-input-title {
+    margin: 0.5rem 0;
+}
+
+.workflow-input-type {
+    &-label {
+        display: block;
+        width: calc(100% - 1rem);
+    }
+
+    &-select {
+        width: 100%;
+        padding: 0.5rem;
+        border-radius: 0.3rem;
+        border: 1px solid var(--main-color-02);
+        color: var(--main-color-02);
+        background-color: transparent;
+        text-align: center;
+        text-align-last: center;
+
+        & option {
+            background-color: var(--background-color-01);
+            text-align: center;
+        }
+
+        &:focus {
+            outline: none;
+            border: 1px solid var(--accent-color-01);
+            box-shadow: 0 0 0.25rem var(--accent-color-01);
+        }
+    }
 }
 
 .workflow-operations {
