--- a/client/src/components/ModuleCard.scss
+++ b/client/src/components/ModuleCard.scss
@@ -19,9 +19,9 @@
         .module-card-mirror {
             height: 0;
             display: none;
-            position: relative;
-            min-width: 150px;
-            width: 150px;
+            position: absolute;
+            min-width: 200px;
+            width: 200px;
             margin: 0 1rem;
             display: flex;
             flex-direction: column;
@@ -52,7 +52,7 @@
             }
 
             .module-card-mirror {
-                height: 150px;
+                height: 200px;
                 margin: 2.5rem 1rem 1rem;
                 border: 2px solid white;
                 display: block;
