--- a/client/src/components/ModuleCard.scss
+++ b/client/src/components/ModuleCard.scss
@@ -1,4 +1,6 @@
 .module-card {
+    --status-completed-color: var(--accent-color-02);
+
     height: 200px;
     position: relative;
     min-width: 200px;
@@ -14,6 +16,33 @@
     color: white;
     font-weight: bold;
     text-align: center;
+
+    &.ready {
+        color: green;
+    }
+
+    &::after {
+        content: '';
+        height: 100%;
+        width: 100%;
+        position: absolute;
+        top: 50%;
+        left: 50%;
+        transform: translate(-50%, -50%) scale(0, 0);
+        transform-origin: center center;
+        background-color: green;
+        border: 2px solid green;
+        border-radius: 5px;
+        opacity: 0;
+        transition: all 0.2s;
+    }
+
+    &.ready::after {
+        transform: translate(-50%, -50%) scale(1, 1);
+        transform-origin: center center;
+        background-color: transparent;
+        opacity: 1;
+    }
 
     &-wrapper.extensible {
         .module-card-mirror {
@@ -67,6 +96,37 @@
                     font-size: 3rem;
                     color: rgba(255, 255, 255, 0.5);
                 }
+            }
+        }
+    }
+
+    &-status {
+        height: 2rem;
+        width: 2rem;
+        position: absolute;
+        top: -1rem;
+        left: 50%;
+        transform: translateX(-50%) scale(3);
+        border-radius: 50%;
+        background-color: var(--status-completed-color);
+        transition: 0.2s;
+        pointer-events: none;
+        opacity: 0;
+    }
+
+    &.completed {
+        .module-card-status {
+            transform: translateX(-50%) scale(1);
+            opacity: 1;
+
+            &:after {
+                content: '\2713';
+                color: white;
+                position: absolute;
+                top: 50%;
+                left: 50%;
+                transform: translate(-50%, -50%);
+                font-size: 1.75rem;
             }
         }
     }
