Show loading indicator when workflow execution in progress

--- a/client/src/components/ModuleBoard.scss
+++ b/client/src/components/ModuleBoard.scss
@@ -95,6 +95,7 @@
 }
 
 .workflow-controls {
+    width: 60px;
     display: flex;
     flex-direction: column;
     justify-content: center;
@@ -103,6 +104,9 @@
     .workflow-button-execute,
     .workflow-button-save {
         margin: 1rem;
+        display: flex;
+        justify-content: center;
+        align-items: center;
         cursor: pointer;
 
         & svg {
